//! Governance service implementation

use crate::conversions::datetime_to_timestamp;
use crate::proto::{
    governance_service_server::GovernanceService, CastVoteRequest, CastVoteResponse,
    CreateProposalRequest, CreateProposalResponse, GetProposalRequest, GetProposalResponse,
    ListProposalsRequest, ListProposalsResponse,
};
use tonic::{Request, Response, Status};
use tracing::{debug, info};

/// Governance service implementation
#[derive(Debug, Clone)]
pub struct GovernanceServiceImpl {
    // TODO: Add application service dependencies
}

impl GovernanceServiceImpl {
    /// Create a new governance service
    pub fn new() -> Self {
        Self {}
    }
}

impl Default for GovernanceServiceImpl {
    fn default() -> Self {
        Self::new()
    }
}

#[tonic::async_trait]
impl GovernanceService for GovernanceServiceImpl {
    async fn create_proposal(
        &self,
        request: Request<CreateProposalRequest>,
    ) -> Result<Response<CreateProposalResponse>, Status> {
        let req = request.into_inner();
        info!("Creating proposal: {}", req.title);

        // TODO: Call application service to create proposal
        // Verify user has permission to create proposals
        // Initialize voting state
        // Notify reviewers

        Err(Status::unimplemented("Create proposal not yet implemented"))
    }

    async fn get_proposal(
        &self,
        request: Request<GetProposalRequest>,
    ) -> Result<Response<GetProposalResponse>, Status> {
        let req = request.into_inner();
        info!("Getting proposal: {}", req.id);

        // TODO: Call application service to get proposal
        Err(Status::not_found("Proposal not found"))
    }

    async fn list_proposals(
        &self,
        request: Request<ListProposalsRequest>,
    ) -> Result<Response<ListProposalsResponse>, Status> {
        let req = request.into_inner();
        debug!("Listing proposals with filters");

        // TODO: Call application service to list proposals
        // Apply filters for type, status, created_by
        // Apply pagination
        // Sort by creation date or status

        Ok(Response::new(ListProposalsResponse {
            proposals: vec![],
            total_count: 0,
            page: req.page,
            page_size: req.page_size,
        }))
    }

    async fn cast_vote(
        &self,
        request: Request<CastVoteRequest>,
    ) -> Result<Response<CastVoteResponse>, Status> {
        let req = request.into_inner();
        info!("Casting vote on proposal: {}", req.proposal_id);

        // TODO: Call application service to cast vote
        // Verify user has voting rights
        // Verify proposal is in voting state
        // Verify user hasn't already voted
        // Record vote
        // Update vote counts
        // Check if voting is complete

        Err(Status::unimplemented("Cast vote not yet implemented"))
    }
}
